--- a/README.html
+++ b/README.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>README count-tasks and gcount-tasks</title>
 </head>
-<h1 id="countboinctasks">countBOINCtasks</h1>
+<h1 id="countboinctasks">Project: countBOINCtasks</h1>
+<p><img src="images/count_logo_sm.png" alt="count_logo"></p>
 <h2 id="count-tasks">count-tasks</h2>
 <p>A utility for monitoring task data reported by the boinc-client.
 It may be useful for comparing task productivity between different computers or configurations.</p>
@@ -111,7 +112,7 @@ commands from within the parent folder:
 <li>Pop-up Help menus.</li>
 </ul>
 
-<p><img src="gcount-tasks_scrnshot.png" alt="gcount-tasks"></p>
+<p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks"></p>
 <h3 id="stand-alone-versions-no-python-installation-needed-">Stand-alone versions (no Python installation needed!)</h3>
 <h4 id="gcount_tasks-exe-windows">gcount_tasks.exe - Windows</h4>
 <p>A <strong>Windows</strong> standalone of gcount-tasks is available. Download and extract the GitHub distribution package as outlined above. Inside the <code>CountBOINCtasks-master/Standalone_distributables</code> folder is <code>gcount-tasks_win.zip</code>. Alternatively, this compressed file can be downloaded directly from  <a href="https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_win.zip">https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_win.zip</a>. Select &#39;Extract All&#39; for the downloaded ZIP file. After extraction, the .exe extension may not show, depending on your system view settings. Double-click <code>gcount-tasks.exe</code> to launch. Because this project is in the beta phase, along with the program GUI, a Command Prompt window will appear to display possible Python error messages. Closing the Command Prompt window will also close the GUI.</p>
