update images and icons

--- a/README.html
+++ b/README.html
@@ -108,11 +108,13 @@ commands from within the parent folder:
 <ul>
 <li>View the log file in a pop-up window.</li>
 <li>Backup the log file.</li>
-<li>View analysis of cumulative log data in a pop-up window; save results to file.</li>
+<li>Analysis of data recorded in the log file.</li>
 <li>Pop-up Help menus.</li>
 </ul>
 
-<p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks"></p>
+<p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks main window"></p>
+<p><img src="images/gcount-tasks_analysis.png" alt="log analysis"></p>
+
 <h3 id="stand-alone-versions-no-python-installation-needed-">Stand-alone versions (no Python installation needed!)</h3>
 <h4 id="gcount_tasks-exe-windows">gcount_tasks.exe - Windows</h4>
 <p>A <strong>Windows</strong> standalone of gcount-tasks is available. Download and extract the GitHub distribution package as outlined above. Inside the <code>CountBOINCtasks-master/Standalone_distributables</code> folder is <code>gcount-tasks_win.zip</code>. Alternatively, this compressed file can be downloaded directly from  <a href="https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_win.zip">https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_win.zip</a>. Select &#39;Extract All&#39; for the downloaded ZIP file. After extraction, the .exe extension may not show, depending on your system view settings. Double-click <code>gcount-tasks.exe</code> to launch. Because this project is in the beta phase, along with the program GUI, a Command Prompt window will appear to display possible Python error messages. Closing the Command Prompt window will also close the GUI.</p>
