fix code for master frame configuration

--- a/README.html
+++ b/README.html
@@ -134,7 +134,7 @@ commands from within the parent folder:
 </ul>
 <h3 id="known-issues">Known Issues</h3>
 <ul>
-<li><p>Versions 0.4.10 - 0.4.12 were prone to freezes. </p>
+<li><p> Waiting for user feedback...</p>
 </li>
 </ul>
 </html>
