--- a/README.html
+++ b/README.html
@@ -9,8 +9,8 @@
 <p><img src="images/count_logo_sm.png" alt="count_logo"></p>
 <h2 id="count-tasks">count-tasks</h2>
 <p>A utility for monitoring task data reported by the boinc-client.
-It may be useful for comparing task productivity between different computers or configurations.</p>
-<p>Developed with Python 3.8, under Ubuntu 20.04, Windows 10 and Mac OS 10.13. You
+It may be useful for comparing task productivity between different computers or configurations. See further below for GUI and standalone implementations.</p>
+<p>Developed with Python 3.8, under Ubuntu 20.04, Windows 10 and macOS 10.13. Unless running one of the standalones, you
  may need to download or update to Python 3.6 or later. Recent Python
   packages can be downloaded from <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a>.</p>
 <h3 id="usage-">Usage:</h3>
@@ -97,7 +97,7 @@ TIP: To get only the most recent task count and time metrics without
 <h2 id="gcount-tasks">gcount-tasks</h2>
 The GUI version of count-tasks.
 Download and run as described under Usage, but launch the program with these Terminal
-commands from within the parent folder:
+ or Command Prompt commands from within the parent folder:
 <ul>
 <li>for Linux or Mac OS: <code>./gcount-tasks</code> -or- <code>python3 gcount-tasks</code></li>
 <li>for Windows: <code>python gcount-tasks</code></li>
@@ -115,12 +115,12 @@ commands from within the parent folder:
 <p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks main window"></p>
 <p><img src="images/gcount-tasks_analysis.png" alt="log analysis"></p>
 
-<h2 id="stand-alone-versions-no-python-installation-needed-">Stand-alone versions (no Python installation needed!)</h2>
+<h2 id="GcountTasks-standalones">Stand-alone versions: GcountTasks (no Python installation needed)</h2>
 <h4 id="gcount_tasks-exe-windows">GcountTasks.exe - Windows</h4>
 <p>A <strong>Windows</strong> standalone of gcount-tasks is available. Download and extract the GitHub distribution package as outlined above. Inside the <code>CountBOINCtasks-master/Standalone_distributables</code> folder is <code>GcountTasks_win.zip</code>. Alternatively, this compressed file can be downloaded directly from  <a href="https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/GcountTasks_win.zip">https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/GcountTasks_win.zip</a>. Select &#39;Extract All&#39; for the downloaded ZIP file. After extraction, the .exe extension may not show, depending on your system view settings. Double-click <code>GcountTasks.exe</code> to launch. Because this project is in the beta phase, along with the program GUI, a Command Prompt window will appear to display possible Python error messages. Closing the Command Prompt window will also close the GUI.</p>
 <p>You will likely first need to permit Windows to run the .exe file: from the pop-up warning, click on &quot;more info&quot;, then follow the prompts to open the program. </p>
 <p>The <code>GcountTasks.exe</code> executable was created with PyInstaller, available from <a href="https://pypi.org/project/pyinstaller/">https://pypi.org/project/pyinstaller/</a></p>
-<h4 id="gcount_tasks-linux">gcount_tasks - Linux</h4>
+<h4 id="GcountTasks-linux">GcountTasks - Linux</h4>
 <p>A <strong>Linux</strong> standalone of gcount-tasks python script is available.  Download and extract the GitHub distribution package as outlined above. Inside CountBOINCtasks-master/Standalone_distributables folder is <code>gcount-tasks_linux.zip</code>. Alternatively, the archived program can be downloaded directly from <a href="https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_linux.zip">https://github.com/csecht/CountBOINCtasks/blob/master/Standalone_distributables/gcount-tasks_linux.zip</a> . Extract the archive and move the gcount-tasks executable file to a convenient location; double-click to launch. You may need to change its permissions to allow it to launch.</p>
 <p>The <code>gcount-task</code> single file executable was created with PyInstaller available from <a href="https://pypi.org/project/pyinstaller/">https://pypi.org/project/pyinstaller/</a></p>
 <h4 id="gcounttasks-app-macos">GcountTasks.app - MacOS</h4>
