minor edits to README files

--- a/README.html
+++ b/README.html
@@ -99,8 +99,8 @@ The GUI version of count-tasks.
 Download and run as described under Usage, but launch the program with these Terminal
  or Command Prompt commands from within the parent folder:
 <ul>
-<li>for Linux or Mac OS: <code>./gcount-tasks</code> -or- <code>python3 gcount-tasks</code></li>
-<li>for Windows: <code>python gcount-tasks</code></li>
+<li>Linux or Mac OS: <code>./gcount-tasks</code> -or- <code>python3 gcount-tasks</code></li>
+<li>Windows: <code>python gcount-tasks</code></li>
 </ul>
 
 <p>For a brief description and version number, use the <code>--about</code> command line option.</p>
