minor html code edit

--- a/README.html
+++ b/README.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<!--markdown .md to HTML conversion courtesy of https://markdowntohtml.com/ -->
 <html lang="en">
-<!-- md to htlm conversion done by https://markdowntohtml.com/ -->
 <head>
-    <meta charset="UTF-8">
     <title>README count-tasks and gcount-tasks</title>
 </head>
 <h1 id="countboinctasks">Project: countBOINCtasks</h1>
