--- a/README.html
+++ b/README.html
@@ -108,12 +108,14 @@ Download and run as described under Usage, but launch the program with these Ter
 <ul>
 <li>View the log file in a pop-up window.</li>
 <li>Backup the log file.</li>
-<li>Analysis of data recorded in the log file.</li>
+<li>Analysis and plotting of data recorded in the log file.</li>
 <li>Pop-up Help menus.</li>
 </ul>
 
 <p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks main window"></p>
 <p><img src="images/gcount-tasks_analysis.png" alt="log analysis"></p>
+<p><img src="images/gcount-tasks_plot.png" alt="time plot"></p>
+
 
 <h2 id="GcountTasks-standalones">Stand-alone versions: GcountTasks (no Python installation needed)</h2>
 <p>Note that these stand-alone programs will only run with the boinccmd binary in its default install location. If you launch a GcountTasks stand-alone and get an error message, you can still run gcount-tasks from the command line once you set up a valid boinccmd path in the countCFG.txt configuration file.</p>
