--- a/README.html
+++ b/README.html
@@ -114,15 +114,16 @@ Download and run as described under Usage, but launch the program with these Ter
 
 <p><img src="images/gcount-tasks_scrnshot.png" alt="gcount-tasks main window"></p>
 <p><img src="images/gcount-tasks_analysis.png" alt="log analysis"></p>
-<p>Iniitial plot of task time data in the log file.
-<img src="images/gcount-tasks_plot.png" alt="time-plot"></p>
-<p>Use of magnifier tool to zoom in on average task times.
-<img src="images/gcount-tasks_plot_Yzoom.png" alt="zoom-plot"></p>
-<p>Zoom in again for two weeks of task time data.
-<img src="images/gcount-tasks_plot_XYzoom.png" alt="zoom-plot"></p>
-<p>Initial view showing all logged task count data.
-<img src="images/gcount-tasks_plot_counts.png" alt="zoom-plot"></p>
-
+<p>Iniitial plot of task time data in the log file.</p>
+<p><img src="images/gcount-tasks_plot.png" alt="time-plot"></p>
+<p>Use of magnifier tool to zoom in on average task times.</p>
+<p><img src="images/gcount-tasks_plot_Yzoom.png" alt="zoom-plot"></p>
+<p>Zoom in again for two weeks of task time data.</p>
+<p><img src="images/gcount-tasks_plot_XYzoom.png" alt="zoom-plot"></p>
+<p>Initial view showing all logged task count data.</p>
+<p><img src="images/gcount-tasks_plot_counts.png" alt="zoom-plot"></p>
+<p>If the plotting function does not seem to be working, it can be tested with example log data provided with this distribution. From the Help menu, select "Text example data" to produce this plot window:</p>
+<p><img src="images/gcount-tasks_testplot.png" alt="example-plot"></p>
 <h2 id="GcountTasks-standalones">Stand-alone versions: GcountTasks (no Python installation needed)</h2>
 <p>Note that these stand-alone programs will only run with the boinccmd binary in its default install location. If you launch a GcountTasks stand-alone and get an error message, you can still run gcount-tasks from the command line once you set up a valid boinccmd path in the countCFG.txt configuration file.</p>
 <h4 id="gcount_tasks-exe-windows">GcountTasks.exe - Windows</h4>
