fix README typo

--- a/README.html
+++ b/README.html
@@ -122,7 +122,7 @@ Download and run as described under Usage, but launch the program with these Ter
 <p><img src="images/gcount-tasks_plot_XYzoom.png" alt="zoom-plot"></p>
 <p>Initial view showing all logged task count data.</p>
 <p><img src="images/gcount-tasks_plot_counts.png" alt="zoom-plot"></p>
-<p>If the plotting function does not seem to be working, it can be tested with example log data provided with this distribution. From the Help menu, select "Text example data" to produce this plot window:</p>
+<p>If the plotting function does not seem to be working, it can be tested with example log data provided with this distribution. From the Help menu, select "Test example data" to produce this plot window:</p>
 <p><img src="images/gcount-tasks_testplot.png" alt="example-plot"></p>
 <h2 id="GcountTasks-standalones">Stand-alone versions: GcountTasks (no Python installation needed)</h2>
 <p>Note that these stand-alone programs will only run with the boinccmd binary in its default install location. If you launch a GcountTasks stand-alone and get an error message, you can still run gcount-tasks from the command line once you set up a valid boinccmd path in the countCFG.txt configuration file.</p>
